<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMainLayout"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_large">

        <ImageView
            android:id="@+id/ivHeading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/iv_image_of_the_favorite"
            android:scaleType="centerCrop"
            android:src="@drawable/iv_favorites"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHeading"
            style="@style/StyleTextViewTitleHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="@drawable/shape_tv_heading"
            android:gravity="center"
            android:padding="@dimen/padding_small"
            android:text="@string/title_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvNoFavorites"
        style="@style/StyleTextNoFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/no_favorite_recipes"
        android:textSize="18sp"
        android:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavoriteRecipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_medium"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:spanCount="1"
        tools:itemCount="8"
        tools:listitem="@layout/item_recipes" />

</LinearLayout>