<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundMainLayout"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_large">

            <ImageView
                android:id="@+id/ivHeading"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/iv_image_of_the_categories"
                android:scaleType="centerCrop"
                android:src="@drawable/iv_burger"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHeading"
                style="@style/StyleTextViewTitleHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                android:background="@drawable/shape_tv_heading"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Классический гамбургер" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginVertical="@dimen/margin_large">

            <TextView
                android:id="@+id/tvTitleSectionIngredients"
                style="@style/StyleTextViewTitleSectionsRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_section_ingredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Ингредиенты" />

            <TextView
                android:id="@+id/tvTitlePortion"
                style="@style/StyleTextViewPortion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/title_portion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleSectionIngredients"
                tools:text="Порции:" />

            <TextView
                android:id="@+id/tvCountPortion"
                style="@style/StyleTextViewPortion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/default_count_portion"
                app:layout_constraintStart_toEndOf="@+id/tvTitlePortion"
                app:layout_constraintTop_toTopOf="@+id/tvTitlePortion"
                tools:text="1" />

            <SeekBar
                android:id="@+id/sbCountPortion"
                style="@style/StyleSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:max="5"
                android:min="1"
                android:progress="1"
                app:layout_constraintTop_toBottomOf="@+id/tvCountPortion" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginVertical="@dimen/margin_large"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="9"
            tools:listitem="@layout/item_ingredient" />

        <TextView
            android:id="@+id/tvTitleSectionCookingMethod"
            style="@style/StyleTextViewTitleSectionsRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginVertical="@dimen/margin_large"
            android:text="@string/title_section_cooking_method"
            tools:text="Способ приготовления" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginVertical="@dimen/margin_large"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_method" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>